# haskell-playground

./: .gitignore  LICENSE  README.md  flake.nix  playground.cabal
app/: DecideConstr.hs  IxMonad.hs
bench/PointerChasing/: Main.hs
cabal/: Makefile  cabal.project.local  playground.cabal
cabal/app/: AndPatterns.hs  Async.hs  DependentFieldsStruct.hs  Dynamic.hs  HasC.hs  IxMonad.hs  Linear.hs  Read.hs  UnsafePerformIO.hs  VariadicVec.hs  Void.hs
cabal/app/Singletons/: Exercises1.hs  Exercises2.hs  Exercises3.hs  Exercises4.hs  Singleton1.hs  Singleton2.hs  Singleton3.hs  Singleton4.hs  Singleton5.hs
cabal/app/Vector/: Inductive.hs  Vector1.hs  Vector2.hs
cabal/bench/PointerChasing/: Main.hs
cabal/bench/Squaring/: Main.hs
ghc/: A.hs  HasCallStack1.hs  HasCallStack2.hs  LargeThunk.hs  Makefile  XCTraces.hs  gdb-example.hs  script-nix.hs
