cabal-version: 3.4
name:          playground
version:       0.1.0.0
license:       MIT
author:        Arnau Abella
maintainer:    arnauabella@gmail.com
build-type:    Simple

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances -Wincomplete-patterns -eventlog
    "-with-rtsopts=-l -hi -i0.5"

executable playground
  import:           warnings
  main-is:          Main.hs
  other-modules:
    DecideConstr
    DependentFieldsStruct
    HasC
    IxMonad
    Linear
    UnsafePerformIO

  build-depends:
    , base                  >=4.16 && <5
    , do-notation           ^>=0.1
    , first-class-families  ^>=0.8
    , indexed               ^>=0.1
    , linear-base           ^>=0.4
    , text                  ^>=2.0
    , transformers          ^>=0.6

  hs-source-dirs:   app
  default-language: Haskell2010

benchmark pointerChasing
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -fforce-recomp -threaded -rtsopts -prof -eventlog
  build-depends:
    , base        >=4.15
    , containers
    , deepseq
    , gauge
    , random

  hs-source-dirs:   bench/PointerChasing
  main-is:          Main.hs
