cabal-version: 3.4
name:          playground
version:       0.1.0.0
license:       MIT
author:        Arnau Abella
maintainer:    arnauabella@gmail.com
build-type:    Simple

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances -Wincomplete-patterns
    "-with-rtsopts=-l -hi -i0.5"

executable playground
  import:           warnings
  main-is:          Main.hs
  other-modules:
    AndPatterns
    Async
    DecideConstr
    DependentFieldsStruct
    Dynamic
    HasC
    IxMonad
    Linear
    Read
    Singletons.Exercises1
    Singletons.Exercises2
    Singletons.Exercises3
    Singletons.Exercises4
    Singletons.Singleton1
    Singletons.Singleton2
    Singletons.Singleton3
    Singletons.Singleton4
    Singletons.Singleton5
    UnsafePerformIO
    VariadicVec
    Vector.Inductive
    Vector.Vector1
    Vector.Vector2

  -- TODO: generic-lens fails on nix
  build-depends:
    , async                      ^>=2.2
    , base                       >=4.16   && <5
    , do-notation                ^>=0.1
    , finite-typelits            ^>=0.1
    , first-class-families       ^>=0.8
    , generic-lens               ^>=2.2.2
    , ghc-typelits-natnormalise  ^>=0.7
    , indexed                    ^>=0.1
    , linear-base                ^>=0.4
    , mtl                        ^>=2.3
    , singletons                 ^>=3.0
    , singletons-base            ^>=3.2
    , singletons-th              ^>=3.2
    , stm                        ^>=2.5
    , text                       ^>=2.0
    , transformers               ^>=0.6
    , vector                     ^>=0.13

  hs-source-dirs:   app
  default-language: Haskell2010

benchmark pointerChasing
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -fforce-recomp -threaded -rtsopts -prof
  build-depends:
    , base        >=4.16 && <5
    , containers
    , deepseq
    , gauge
    , random

  hs-source-dirs:   bench/PointerChasing
  main-is:          Main.hs

benchmark squaring
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -O2
  build-depends:
    , base        >=4.16 && <5
    , bytestring
    , gauge
    , text        >=2.0

  hs-source-dirs:   bench/Squaring
  main-is:          Main.hs
